--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,18 @@
 
     <properties>
         <spring.version>5.0.5.RELEASE</spring.version>
+        <org.slf4j-version>1.7.25</org.slf4j-version>
+        <jackson.databind-version>2.9.5</jackson.databind-version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <!-- JACKSON -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.databind-version}</version>
+            </dependency>
             <!-- SPRING DEPENDENCIES -->
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -39,6 +47,28 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-web</artifactId>
                 <version>${spring.version}</version>
+            </dependency>
+
+            <!-- LOGGING -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${org.slf4j-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jcl-over-slf4j</artifactId>
+                <version>${org.slf4j-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>${org.slf4j-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>1.2.15</version>
             </dependency>
 
             <!-- TEST -->
