--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 
     <properties>
         <spring.version>5.0.5.RELEASE</spring.version>
+        <spring-security-version>5.0.4.RELEASE</spring-security-version>
+
         <org.slf4j-version>1.7.25</org.slf4j-version>
         <jackson.databind-version>2.9.5</jackson.databind-version>
     </properties>
@@ -47,6 +49,23 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-web</artifactId>
                 <version>${spring.version}</version>
+            </dependency>
+
+            <!-- SPRING SECURITY -->
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-config</artifactId>
+                <version>${spring-security-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-web</artifactId>
+                <version>${spring-security-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-core</artifactId>
+                <version>${spring-security-version}</version>
             </dependency>
 
             <!-- LOGGING -->
